--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,10 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>Loose collective based in Manchester, UK interested in all things Blockchain.</p>
+                <p>Loose collective based in Manchester interested in all things Blockchain</p>
             </div>
             <div class="col-lg-4">
-                <p>Blah blah</p>
+                <p>Watch this space for meetups, code, articles, and a few beers along the way</p>
             </div>
         </div>
     </div>
