--- a/_includes/stuff.html
+++ b/_includes/stuff.html
@@ -10,10 +10,12 @@
         <div class="row">
             {% for post in site.posts %}
             <div class="col-sm-4 portfolio-item">
-                <a href="{{ post.link }}" class="portfolio-link" target="_new">
-                    <i class="fa fa-3x fa-{{ post.fa }}"></i>
-                    {{ post.description }}
-                </a>
+                <div class="thumbnail">
+                    <img src="{{ post.image }}" alt="Blockchain">
+                    <div class="caption">
+                        <p><a href="{{ post.link }}" class="portfolio-link" target="_new">{{ post.description }}</a></p>
+                    </div>
+                </div>
             </div>
             {% endfor %}
         </div>
