extra post test

--- a/_includes/stuff.html
+++ b/_includes/stuff.html
@@ -11,7 +11,7 @@
             {% for post in site.posts %}
             <div class="col-sm-4 portfolio-item">
                 <div class="thumbnail">
-                    <img src="{{ post.image }}" alt="Blockchain">
+                    <img src="{{ post.image }}"/>
                     <div class="caption">
                         <p><a href="{{ post.link }}" class="portfolio-link" target="_new">{{ post.description }}</a></p>
                     </div>
