--- a/_includes/stuff.html
+++ b/_includes/stuff.html
@@ -13,7 +13,7 @@
                 <div class="thumbnail">
                     <img src="{{ post.image }}"/>
                     <div class="caption">
-                        <p><a href="{{ post.link }}" class="portfolio-link" target="_new">{{ post.description }}</a></p>
+                        <p><a href="{{ post.link }}" class="portfolio-link" target="_blank">{{ post.description }}</a></p>
                     </div>
                 </div>
             </div>
