--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -272,6 +272,10 @@ footer .footer-below {
     outline: 0;
 }
 
+a.navbar-brand:hover, a.navbar-brand:focus, a.navbar-brand:active {
+    color: #{{ site.color.secondary-light }} !important;
+}
+
 .navbar-nav>.active>a {
     background-color: #{{ site.color.secondary-light }} !important;
 }
