Adding email/contact us place holder

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,12 @@
                         {% endfor %}
                     </ul>
                 </div>
+                <div class="footer-col col-md-4 text-center">
+                    <h3>{{ site.footer.mailing }}</h3>
+                    <ul class="list-inline">
+                        TODO - add sign up box?
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
