--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     {% include header.html %}
     {% include stuff.html %}
     {% include about.html %}
+    {% include contact_us.html %}
 
     {% include footer.html %}
     {% include js.html %}
