--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive" src="img/bm.png" alt="BM" style="max-width: 200px">
+                <img class="img-responsive" src="img/bc-mcr.png" alt="BM" style="max-width: 200px">
                 <div class="intro-text">
                     <span class="skills">{{ site.strapline }}</span>
                 </div>
