--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>Loose collective based in Manchester interested in all things Blockchain.</p>
+                <p>Loose collective based around Manchester interested in doing things with Blockchains.</p>
             </div>
             <div class="col-lg-4">
                 <p>Watch this space for meetups, code, articles, and a few beers along the way.</p>
