--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,9 +24,9 @@
                 <li class="page-scroll">
                     <a href="#about">About</a>
                 </li>
-                <li class="page-scroll">
+     <!--            <li class="page-scroll">
                     <a href="#contact_us">Get in touch</a>
-                </li>
+                </li> -->
             </ul>
         </div>
         <!-- /.navbar-collapse -->
