--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -106,7 +106,7 @@ header .intro-text .name {
 header .intro-text .skills {
     font-size: 1.25em;
     font-weight: 300;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Patrick Hand SC', cursive;
 }
 
 @media(min-width:768px) {
