--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -106,7 +106,7 @@ header .intro-text .name {
 header .intro-text .skills {
     font-size: 1.5em;
     font-weight: 300;
-    font-family: 'Patrick Hand SC', cursive;
+    font-family: 'Rokkitt', serif;
 }
 
 @media(min-width:768px) {
@@ -278,7 +278,7 @@ footer .footer-below {
 }
 
 .navbar-nav>.active>a {
-    background-color: #{{ site.color.primary }} !important;
+    background-color: #{{ site.color.secondary-dark }} !important;
 }
 
 /* Fix modal mouse wheel issues */
