removed contact us for now

--- a/_includes/contact_us.html
+++ b/_includes/contact_us.html
@@ -1,4 +1,4 @@
-<!-- Portfolio Grid Section -->
+<!-- Contact section -->
 <section id="contact_us">
     <div class="container">
         <div class="row">
