--- a/_includes/stuff.html
+++ b/_includes/stuff.html
@@ -1,4 +1,4 @@
-<!-- Portfolio Grid Section -->
+<!-- Stuff Section -->
 <section id="stuff">
     <div class="container">
         <div class="row">
