--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <!-- Footer -->
 <footer>
-    <div class="footer-above">
+    <div class="footer-above text-center">
         <div class="container">
             <div class="row">
-                <div class="footer-col col-md-4 text-center">
+<!--                 <div class="footer-col col-md-4 text-center">
                     <h3>{{ site.footer.wallets }}</h3>
                     <p class="small">Donations always welcome</p>
                     <ul class="list-unstyled">
@@ -15,8 +15,8 @@
                         </li>
                         {% endfor %}
                     </ul>
-                </div>
-                <div class="footer-col col-md-4 text-center">
+                </div> -->
+                <div class="footer-col col-md-6">
                     <h3>{{ site.footer.social }}</h3>
                     <ul class="list-inline">
                         {% for network in site.social %}
@@ -26,7 +26,7 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="footer-col col-md-4 text-center">
+                <div class="footer-col col-md-6">
                     <h3>{{ site.footer.contact }}</h3>
                     <ul class="list-inline">
                         <li>
