--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,9 @@
                 <div class="intro-text">
                     <span class="skills">{{ site.strapline }}</span>
                 </div>
+                <div class="meetup">
+                    <i class="fa fa-fw fa-2x fa-calendar-o"></i> <a href="https://www.meetup.com/BlockchainManchesterMeetup/events/243737738/" target="_blank">Meetup 0: Genesis - 24th October 7pm</a>
+                </div>
             </div>
         </div>
     </div>
