FIrebase email capture

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,6 +33,21 @@
                             <a href="mailto:{{ site.email }}" class="footer-contact">{{ site.email }}</a>
                         </li>
                     </ul>
+                    <hr>
+                    <h6>Subscribe to our mailing list</h6>
+                    <ul>
+                        <form class="form-inline" id="mailing-list-form">
+                            <div id="email-signup-form-components" class="form-group-sm">
+                                <input type="email" id="email" class="form-control" placeholder="Email..." required>
+                                <button type="submit" class="btn btn-sm btn-primary form-control"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+                            </div>
+                            <div class="form-group-sm">
+                                <p id="email-msg"></p>
+                            </div>
+                        </form>
+                    </ul>
+
+
                 </div>
             </div>
         </div>
