changed next meetup link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                     <span class="skills">{{ site.strapline }}</span>
                 </div>
                 <div class="meetup">
-                    <i class="fa fa-fw fa-2x fa-calendar-o"></i> <a href="https://www.meetup.com/BlockchainManchesterMeetup/events/243737738/" target="_blank">Meetup 0: Genesis - 24th October 7pm</a>
+                    <i class="fa fa-fw fa-2x fa-calendar-o"></i> <a href="https://www.meetup.com/BlockchainManchesterMeetup/events/244598678/?ed=date" target="_blank">Meetup 1: Dapps - 28th November 7pm</a>
                 </div>
             </div>
         </div>
