--- a/_includes/stuff.html
+++ b/_includes/stuff.html
@@ -11,9 +11,9 @@
             {% for post in site.posts %}
             <div class="col-sm-4 portfolio-item">
                 <div class="thumbnail">
-                    <img src="{{ post.image }}" class="thumbnail-image"  />
+                    <div class="thumbnail-stuff" style="background-image: url('{{ post.image }}')"></div>
                     <div class="caption">
-                        <p><a href="{{ post.link }}" class="portfolio-link" target="_blank">{{ post.description }} <i class="fa fa-external-link" aria-hidden="true"></i></a></p>
+                        <p><br/><a href="{{ post.link }}" class="portfolio-link" target="_blank">{{ post.description }} <i class="fa fa-external-link" aria-hidden="true"></i></a></p>
                     </div>
                 </div>
             </div>
