remove old meetup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,9 +7,9 @@
                 <div class="intro-text">
                     <span class="skills">{{ site.strapline }}</span>
                 </div>
-                <div class="meetup">
+<!--                 <div class="meetup">
                     <i class="fa fa-fw fa-2x fa-meetup"></i> <a href="https://www.meetup.com/BlockchainManchesterMeetup/events/244598678/?ed=date" target="_blank">Meetup 1: Dapps - 28th November 7pm</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
