--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,13 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive" src="img/bc-mcr.png" alt="BM" style="max-width: 200px">
+                <img class="img-responsive" src="img/mc-mcr-circle-logo.png" alt="BM" style="max-width: 250px">
                 <div class="intro-text">
                     <span class="skills">{{ site.strapline }}</span>
                 </div>
-<!--                 <div class="meetup">
-                    <i class="fa fa-fw fa-2x fa-meetup"></i> <a href="https://www.meetup.com/BlockchainManchesterMeetup/events/244598678/?ed=date" target="_blank">Meetup 1: Dapps - 28th November 7pm</a>
-                </div> -->
+                 <div class="meetup">
+                    <i class="fa fa-fw fa-2x fa-meetup"></i> <a href="https://www.meetup.com/BlockchainManchesterMeetup" target="_blank">Our Meetups</a>
+                </div>
             </div>
         </div>
     </div>
