--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,8 @@
                     <span class="skills">{{ site.strapline }}</span>
                 </div>
                  <div class="meetup">
-                    <i class="fa fa-fw fa-2x fa-meetup"></i> <a href="https://www.meetup.com/BlockchainManchesterMeetup" target="_blank">Our Meetups</a>
+                    <!--<i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/BlockchainManchesterMeetup" target="_blank">Our Meetups</a>-->
+                    <i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/Expert-Talks-Leeds/events/245914282/" target="_blank">An introduction to Blockchain technologies (Leeds): 1st Feb</a>
                 </div>
             </div>
         </div>
