--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
                 </div>
                  <div class="meetup">
                     <!--<i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/BlockchainManchesterMeetup" target="_blank">Our Meetups</a>-->
-                    <i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/Expert-Talks-Leeds/events/245914282/" target="_blank">An introduction to Blockchain technologies (Leeds): 1st Feb</a>
+                    <!--i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/Expert-Talks-Leeds/events/245914282/" target="_blank">An introduction to Blockchain technologies (Leeds): 1st Feb</a-->
+                    <i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/BlockchainManchesterMeetup/events/247536598/" target="_blank">Business & Blockchain, PoW vs PoS, NEO Overview: 27th Feb</a>
                 </div>
             </div>
         </div>
