Adding coinbase commerce donations

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,8 +22,15 @@
                         </li>
                         {% endfor %}
                     </ul>
+                     <div>
+                         <a class="donate-with-crypto"
+                            href="https://commerce.coinbase.com/checkout/5c724f19-ea49-4b9e-9bb1-bfa9f778c242">
+                             <span>Donate with Crypto</span>
+                         </a>
+                         <script src="https://commerce.coinbase.com/v1/checkout.js">
+                         </script>
+                     </div>
                 </div>
-
                 <div class="footer-col col-md-6">
                     <div class="row">
                         <div class="col-md-12">
