Adding buy sticket button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,18 @@
                         </li>
                         {% endfor %}
                     </ul>
+
+                     <div>
+                         <a class="buy-with-crypto"
+                            href="https://commerce.coinbase.com/checkout/0d7558ef-9228-44f9-8be5-a9698084a7c1">
+                             <span>Buy stickers with crypto</span>
+                         </a>
+                         <script src="https://commerce.coinbase.com/v1/checkout.js">
+                         </script>
+                     </div>
+
+                    <br/>
+
                      <div>
                          <a class="donate-with-crypto"
                             href="https://commerce.coinbase.com/checkout/5c724f19-ea49-4b9e-9bb1-bfa9f778c242">
