--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
                      <div>
                          <a class="buy-with-crypto"
                             href="https://commerce.coinbase.com/checkout/0d7558ef-9228-44f9-8be5-a9698084a7c1">
-                             <span>Buy stickers with crypto</span>
+                             <span>Buy Stickers with Crypto</span>
                          </a>
                          <script src="https://commerce.coinbase.com/v1/checkout.js">
                          </script>
