--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive" src="img/mc-mcr-circle-logo.png" alt="BM" style="max-width: 250px">
+                <img class="img-responsive" src="img/bc-mcr.png" alt="BM" style="max-width: 250px">
                 <div class="intro-text">
                     <span class="skills">{{ site.strapline }}</span>
                 </div>
                  <div class="meetup">
-                    <!--<i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/BlockchainManchesterMeetup" target="_blank">Our Meetups</a>-->
-                    <!--i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/Expert-Talks-Leeds/events/245914282/" target="_blank">An introduction to Blockchain technologies (Leeds): 1st Feb</a-->
                     <i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/BlockchainManchesterMeetup/events/247536598/" target="_blank">Business & Blockchain, PoW vs PoS, NEO Overview: 27th Feb</a>
                 </div>
             </div>
