--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
                      <div>
                          <a class="buy-with-crypto"
                             href="https://commerce.coinbase.com/checkout/0d7558ef-9228-44f9-8be5-a9698084a7c1">
-                             <span>Buy Stickers with Crypto</span>
+                             <span>Buy stickers with cryptocurrency</span>
                          </a>
                          <script src="https://commerce.coinbase.com/v1/checkout.js">
                          </script>
@@ -37,7 +37,7 @@
                      <div>
                          <a class="donate-with-crypto"
                             href="https://commerce.coinbase.com/checkout/5c724f19-ea49-4b9e-9bb1-bfa9f778c242">
-                             <span>Donate with Crypto</span>
+                             <span>Donate with cryptocurrency</span>
                          </a>
                          <script src="https://commerce.coinbase.com/v1/checkout.js">
                          </script>
