Removal of old meetup, replaced with social links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,9 +7,17 @@
                 <div class="intro-text">
                     <span class="skills">{{ site.strapline }}</span>
                 </div>
-                 <div class="meetup">
-                    <i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/BlockchainManchesterMeetup/events/247536598/" target="_blank">Business & Blockchain, PoW vs PoS, NEO Overview: 27th Feb</a>
+                <div class="meetup">
+                    <div>
+                        <a href="https://t.me/blockchain_manc" target="_blank"><i class="fa fa-fw fa-2x fa-telegram"></i> Join Telegram</a>
+                    </div>
+                    <div style="padding-top: 15px">
+                        <a href="https://join.slack.com/t/blockchainmanc/shared_invite/enQtMjU4MTczNjgyMTk1LWE2NjYwZDA4ZmYzM2U4NjBkNTk5MDMyZjI5MWFjYzc4YTU1MDExZWI0MzRkYzQ1YTQ0YjI1ZjY5MGUyMTVhYTA" target="_blank"><i class="fa fa-fw fa-2x fa-slack"></i> Join Slack</a>
+                    </div>
                 </div>
+                 <!--<div class="meetup">-->
+                    <!--<i class="fa fa-fw fa-2x fa-meetup"></i><a href="https://www.meetup.com/BlockchainManchesterMeetup/events/247536598/" target="_blank">Business & Blockchain, PoW vs PoS, NEO Overview: 27th Feb</a>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
